--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
-sonar.projectKey=usbank
-sonar.projectName=usbank
+sonar.projectKey=MVN_test
+sonar.projectName=MVN_test
 sonar.projectVersion=1.0
 sonar.host.url=http://localhost:9000
-sonar.sources=sites/all/modules/custom
+sonar.sources=.
 
 sonar.phpUnit.skip=false
 sonar.phpPmd.skip=false
-sonar.phpDepend.skip=false 
-sonar.language=php
+sonar.phpDepend.skip=false
+sonar.language=java
 sonar.sourceEncoding=UTF-8
 
 sonar.modules=javascript-module,css-module
@@ -15,10 +15,9 @@ sonar.modules=javascript-module,css-module
 # JavaScript module
 javascript-module.sonar.language=js
 javascript-module.sonar.projectBaseDir=.
-javascript-module.sonar.sources=sites/all/themes/custom
+javascript-module.sonar.sources=.
 
 #css-module
-css-module.sonar.language=css
-css-module.sonar.projectBaseDir=.
-css-module.sonar.sources=sites/all/themes/custom 
-
+#css-module.sonar.language=css
+#css-module.sonar.projectBaseDir=.
+#css-module.sonar.sources=sites/all/themes/custom
