--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.phpDepend.skip=false
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 
-sonar.modules=javascript-module,css-module
+sonar.modules=javascript-module
 
 # JavaScript module
 javascript-module.sonar.language=js
